sdk_tests/tests/pbc_contract_codegen/fail/zk/missing_init_for_action.stderr
error[E0425]: cannot find value `__PBC_IS_ZK_CONTRACT` in this scope
 --> tests/pbc_contract_codegen/fail/zk/missing_init_for_action.rs:5:1
  |
5 | #[action(zk = true)]
  | ^^^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the attribute macro `action` (in Nightly builds, run with -Z macro-backtrace for more info)
